# election-result-parser

./: README.md  election.py  pyproject.toml
