[tool.poetry]
name = "election-result-parser"
version = "0.1.0"
description = "Election Result Parser"
authors = ["Jatin Goel <jatin.iiita@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.10.0"
requests = "^2.27.1"
pandas = "^1.4.1"
lxml = "^4.8.0"
tabulate = "^0.8.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
